# dotfiles

./: .editorconfig  .tmux.conf  .vimrc  .zshrc_default  README.md  monokai_background.sh  zsh_customization
python/: Makefile  dev-requirements.pip  justfile  pyproject.toml  requirements.txt  setup.py
python/scripts/: format.sh  lint.sh
